Add trigger commands (#20)
* Add triggers to schema + generated client

* Fix NewTrigger schema

* Fix provider runtime import

* Add trigger create command

* Add trigger get command

* Add trigger delete command

* Add trigger list command

* Rename trigger_invoke operation

* Add trigger invoke command

* Cell level and startNumber should be ints

* Fix notebook ID regex

* cargo fmt
