# generated/fiberplane_api/src/models/mod.rs
@@ -44,6 +44,8 @@ pub mod new_pinned_notebook;
 pub use self::new_pinned_notebook::NewPinnedNotebook;
 pub mod new_proxy;
 pub use self::new_proxy::NewProxy;
+pub mod new_trigger;
+pub use self::new_trigger::NewTrigger;
 pub mod notebook;
 pub use self::notebook::Notebook;
 pub mod notebook_data_source;
@@ -86,8 +88,8 @@ pub mod time_range;
 pub use self::time_range::TimeRange;
 pub mod trigger;
 pub use self::trigger::Trigger;
-pub mod trigger_type;
-pub use self::trigger_type::TriggerType;
+pub mod trigger_web_hook_response;
+pub use self::trigger_web_hook_response::TriggerWebHookResponse;
 pub mod user;
 pub use self::user::User;
 pub mod user_type;
