# generated/fiberplane_api/src/models/new_trigger_with_template_body.rs
@@ -1,0 +1,28 @@
+/*
+ * Fiberplane API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct NewTriggerWithTemplateBody {
+    #[serde(rename = "templateBody")]
+    pub template_body: String,
+}
+
+impl NewTriggerWithTemplateBody {
+    pub fn new(template_body: String) -> NewTriggerWithTemplateBody {
+        NewTriggerWithTemplateBody {
+            template_body,
+        }
+    }
+}
+
+
