# generated/fiberplane_api/src/models/new_trigger_with_template_url.rs
@@ -1,0 +1,28 @@
+/*
+ * Fiberplane API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct NewTriggerWithTemplateUrl {
+    #[serde(rename = "templateUrl")]
+    pub template_url: String,
+}
+
+impl NewTriggerWithTemplateUrl {
+    pub fn new(template_url: String) -> NewTriggerWithTemplateUrl {
+        NewTriggerWithTemplateUrl {
+            template_url,
+        }
+    }
+}
+
+
