# generated/fiberplane_api/src/models/trigger_web_hook_response.rs
@@ -1,0 +1,28 @@
+/*
+ * Fiberplane API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
+pub struct TriggerWebHookResponse {
+    #[serde(rename = "notebookUrl")]
+    pub notebook_url: String,
+}
+
+impl TriggerWebHookResponse {
+    pub fn new(notebook_url: String) -> TriggerWebHookResponse {
+        TriggerWebHookResponse {
+            notebook_url,
+        }
+    }
+}
+
+
